Bug 405352 - inconsistent term for reboot
Summary: inconsistent term for reboot
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-11 14:40 UTC by Harald Sitter
Modified: 2019-03-13 15:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2019-03-11 14:40:12 UTC
As per https://phabricator.kde.org/D19458 and https://phabricator.kde.org/D19459 we now prefer the term "Restart" instead of "Reboot". Discover has rebooty strings in git master though:

discover/qml/UpdatesPage.qml:            PropertyChanges { target: page; title: i18nc("@info", "The system requires a reboot") }
discover/qml/UpdatesPage.qml:            PropertyChanges { target: page; footerLabel: i18nc("@info", "Reboot") }
libdiscover/backends/PackageKitBackend/PackageKitMessages.cpp:            return i18n("A change by '%1' suggests your system to be rebooted.", PackageKit::Daemon::packageName(pkgid));
libdiscover/backends/PackageKitBackend/PackageKitMessages.cpp:            return i18n("The system will have to be rebooted.");
Comment 1 Nate Graham 2019-03-13 15:50:18 UTC
Git commit 69a41b42db73299599020b72cd1d2fd6ed7fffb9 by Nate Graham.
Committed on 13/03/2019 at 15:34.
Pushed by ngraham into branch 'master'.

Use the word "restart" instead of "reboot"
FIXED-IN: 5.16.0

M  +2    -2    discover/qml/UpdatesPage.qml
M  +2    -2    libdiscover/backends/PackageKitBackend/PackageKitMessages.cpp

https://commits.kde.org/discover/69a41b42db73299599020b72cd1d2fd6ed7fffb9