Use the word "restart" instead of "reboot"

BUG: 405352
FIXED-IN: 5.16.0